--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scrolling",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://joehornby.github.io/The-Lab/scrolling",
+  "homepage": "https://joehornby.github.io/skew-scrolling",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
